--- a/component/login/login.module.scss
+++ b/component/login/login.module.scss
@@ -60,6 +60,15 @@
 
     // padding-bottom: 10px;
     // background: yellow;
+    .password {
+      position: relative;
+      .eyeButton {
+        position: absolute;
+        top: 52px;
+        cursor: pointer;
+        right: 8px;
+      }
+    }
     .signUpLink {
       margin-bottom: 10px !important;
       text-align: center;
@@ -68,31 +77,29 @@
 
     .checkbox {
       font-size: 12px;
-      label{
+      label {
         display: flex;
         justify-content: space-between;
-        
       }
-    
+
       input {
         border: 1px solid rgba(255, 57, 81, 1) !important;
       }
     }
     .textGreen {
-      
       // color: #6fd6a4 !important;
-      a{
+      a {
         text-decoration: none;
         color: #6fd6a4 !important;
       }
     }
- 
+
     .input {
       background: #f8f8f8;
 
-      max-width: 600px;
+      max-width: 700px;
       width: 100%;
-      height: 64px ;
+      height: 64px;
     }
     .label {
       font-size: 16px !important;
@@ -107,7 +114,7 @@
       background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
       margin-top: 24px;
       height: 64px;
-      max-width: 600px;
+      max-width: 700px;
     }
     .signup {
       // font-family: "Poppins" ;
@@ -160,6 +167,13 @@
     }
   }
   @media screen and (max-width: 1035px) {
+    .formSide {
+      .password {
+        .eyeButton {
+          right: 7px;
+        }
+      }
+    }
     .imageSide {
       width: 45% !important;
 
@@ -189,6 +203,13 @@
     .formSide {
       width: 50% !important;
       // margin-left: 15px;
+
+      .password {
+        .eyeButton {
+          right: 7px;
+          top: 40px;
+        }
+      }
     }
     .imageSide {
       width: 50% !important;
@@ -198,7 +219,6 @@
       height: 40px !important;
       font-size: 15px;
     }
- 
   }
   @media screen and (max-width: 576px) {
     .formSide {
@@ -245,7 +265,7 @@
       .signUpButton {
         height: 40px !important;
       }
-    
+
       .input {
         height: 40px !important;
         font-size: 14px;
