--- a/component/resetPassword/reset.module.scss
+++ b/component/resetPassword/reset.module.scss
@@ -1,313 +1,324 @@
 .container {
-    // min-width: 100vw;
-    // min-height: 100vh;
-    max-width: 1440px;
-    display: flex;
-    margin:0 auto;
-    // flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding-top: 40px;
-    // margin-top: 30px;
-    // padding-bottom: 10px;
-    // margin-bottom: 70px !important;
-    .imageSide {
-      // display: flex;
-      // justify-content: center;
-      width: 50%;
-      // width: 100%;
-      // align-items: center;
-      // flex-direction: column;
-      .imageText {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        padding-bottom: 50px;
-        .imageTextOne {
-          font-weight: 600;
-        }
-        .imageTextTwo {
-          text-align: center;
-          margin-right: 50px;
-          max-width: 636px;
-          height: 40px;
-        }
-      }
-      .image {
-        // justify-content: center;
-        // align-items: center;
-        //   display: flex;
-        // justify-content: center;
-        // align-items: center;
-        // flex-direction: row;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        // width: 100%;
-        max-width: 800px;
-        width: 100%;
-        height: 700px;
-      }
-    }
-    .formSide {
-      // margin-top: 30px;
-      // width: 50%;
-      // width: 100%;
-      height: 60%;
-      width: 45%;
-      padding-right: 30px;
-      .loremText{
-        font-weight: 400;
-        color:  #94A3B8;
-        margin-bottom: 60px;
-        
-      }
-  
-      // padding-bottom: 10px;
-      // background: yellow;
-      .signUpLink {
-        margin-bottom: 10px !important;
-        text-align: center;
-        font-size: 15px;
-      }
-      .checkbox {
-        font-size: 12px;
-        label {
-          display: flex;
-          justify-content: space-between;
-        }
-        input {
-          border: 1px solid rgba(255, 57, 81, 1) !important;
-        }
-      }
-      .textGreen {
-        color: #6fd6a4;
-      }
-      .passwordone {
-        background: url(/images/ShowIcon.png);
-        background-repeat: no-repeat;
-        background-size: 24px 24px !important;
-        background-position: right;
-        background-color: #F8F8F8;
-        max-width: 600px;
-        width: 100%;
-        height: 64px;
-      }
-      .input {
-        background: #F8F8F8;
-  
-        max-width: 600px;
-        width: 100%;
-        height: 64px;
-      }
-      .label {
-        font-size: 16px !important;
-        font-weight: bold;
-      }
-  
-      .signUpButton {
-        width: 100% !important;
-        border-radius: 8px !important;
-        text-align: center;
-        font-weight: bold;
-        background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
-        margin-top: 300px;
-        height: 64px;
-        margin-bottom: 30px;
-        max-width: 600px;
-        
-      }
-      .signup {
-        // font-family: "Poppins" ;
+  // min-width: 100vw;
+  // min-height: 100vh;
+  max-width: 1440px;
+  display: flex;
+  margin: 0 auto;
+  // flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-top: 40px;
+  // margin-top: 30px;
+  // padding-bottom: 10px;
+  // margin-bottom: 70px !important;
+  .imageSide {
+    // display: flex;
+    // justify-content: center;
+    width: 50%;
+    // width: 100%;
+    // align-items: center;
+    // flex-direction: column;
+    .imageText {
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 50px;
+      .imageTextOne {
         font-weight: 600;
-        font-size: 40px;
-        line-height: 48px;
-        margin: 40px 0;
       }
-  
-      .bottomText {
+      .imageTextTwo {
+        text-align: center;
+        margin-right: 50px;
+        max-width: 636px;
+        height: 40px;
+      }
+    }
+    .image {
+      // justify-content: center;
+      // align-items: center;
+      //   display: flex;
+      // justify-content: center;
+      // align-items: center;
+      // flex-direction: row;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      // width: 100%;
+      max-width: 800px;
+      width: 100%;
+      height: 700px;
+    }
+  }
+  .formSide {
+    // margin-top: 30px;
+    // width: 50%;
+    // width: 100%;
+    height: 60%;
+    width: 45%;
+    padding-right: 30px;
+    .password {
+      position: relative;
+      .eyeButton {
+        position: absolute;
+        top: 52px;
+        cursor: pointer;
+        right: 8px;
+      }
+    }
+
+    .loremText {
+      font-weight: 400;
+      color: #94a3b8;
+      margin-bottom: 60px;
+    }
+
+    // padding-bottom: 10px;
+    // background: yellow;
+    .signUpLink {
+      margin-bottom: 10px !important;
+      text-align: center;
+      font-size: 15px;
+    }
+    .checkbox {
+      font-size: 12px;
+      label {
+        display: flex;
+        justify-content: space-between;
+      }
+      input {
+        border: 1px solid rgba(255, 57, 81, 1) !important;
+      }
+    }
+    .textGreen {
+      color: #6fd6a4;
+    }
+    .passwordone {
+      background: url(/images/ShowIcon.png);
+      background-repeat: no-repeat;
+      background-size: 24px 24px !important;
+      background-position: right;
+      background-color: #f8f8f8;
+      max-width: 600px;
+      width: 100%;
+      height: 64px;
+    }
+    .input {
+      background: #f8f8f8;
+
+      max-width: 700px;
+      width: 100%;
+      height: 64px;
+    }
+    .label {
+      font-size: 16px !important;
+      font-weight: bold;
+    }
+
+    .signUpButton {
+      width: 100% !important;
+      border-radius: 8px !important;
+      text-align: center;
+      font-weight: bold;
+      background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
+      margin-top: 300px;
+      height: 64px;
+      margin-bottom: 30px;
+      max-width: 700px;
+    }
+    .signup {
+      // font-family: "Poppins" ;
+      font-weight: 600;
+      font-size: 40px;
+      line-height: 48px;
+      margin: 40px 0;
+    }
+
+    .bottomText {
+      display: flex;
+      justify-content: center;
+      margin-top: 40px;
+      color: #949494;
+      p {
+        margin-top: 40px;
+        margin-bottom: 58px;
+      }
+    }
+
+    .bottom {
+      //  display: inline-block;
+      // width: 50%;
+      display: flex;
+      // height: 56px;
+      justify-content: space-between;
+      margin-bottom: 40px;
+      // padding-right: 30px;
+
+      .signin {
+        background-color: #f8f8f8;
+        // max-width: 50%;
+        // width: 100%;
+        height: 56px;
         display: flex;
         justify-content: center;
-        margin-top: 40px;
-        color: #949494;
-        p {
-          margin-top: 40px;
-          margin-bottom: 58px;
-        }
-      }
-  
-      .bottom {
-        //  display: inline-block;
-        // width: 50%;
-        display: flex;
-        // height: 56px;
-        justify-content: space-between;
-        margin-bottom: 40px;
-        // padding-right: 30px;
-  
-        .signin {
-          background-color: #f8f8f8;
-          // max-width: 50%;
-          // width: 100%;
-          height: 56px;
+        align-items: center;
+
+        button {
           display: flex;
-          justify-content: center;
+
           align-items: center;
-  
-          button {
-            display: flex;
-  
-            align-items: center;
-          }
-          p {
-            font-weight: bold;
-            margin: 0;
-            padding-left: 10px;
-          }
         }
-      }
-    }
-    @media screen and (max-width: 1035px) {
-      .imageSide {
-        width: 45% !important;
-  
-        // width: 100% !important;
-      }
-      .bottomText {
         p {
-          margin-top: 10px !important;
-          margin-bottom: 18px !important;
-        }
-      }
-      .bottom {
-        width: 100%;
-        // .signin {
-          // width: 140px;
-        // }
-        p {
-          // width: 130px;
-          // font-size: 12px;
-          .hideText{
-            display: none;
-          }
+          font-weight: bold;
+          margin: 0;
+          padding-left: 10px;
         }
       }
     }
-    @media screen and (max-width: 768px) {
-      .formSide{
-        width: 50% !important;
-        margin-left: 15px;
-      }
-      .imageSide {
-        width: 50% !important;
-      }
-      .input {
-        height: 40px !important;
-        font-size: 15px;
-      }
-  
+  }
+  @media screen and (max-width: 1035px) {
+    .imageSide {
+      width: 45% !important;
+
+      // width: 100% !important;
     }
-    @media screen and (max-width: 576px) {
-      .formSide {
-         width: 100% !important;
-         padding-left: 20px;
-        // width: 100%;
-        // height: 100%;
-        // justify-content: center;
-        // // display: flex;
-        // flex-direction: column;
-        // align-items: center;
-      }
-      .imageSide {
-        display: none;
-      }
-      .bottom {
-        width: 100%;
-        // .signin {
-          // width: 140px;
-        // }
-        // p {
-          // width: 110px;
-          // font-size: 9px;
-        // }
+    .bottomText {
+      p {
+        margin-top: 10px !important;
+        margin-bottom: 18px !important;
       }
     }
-    @media screen and (max-width: 400px) {
-      .formSide {
-        // margin-right: 12px;
-        padding: 13px;
-        .bottomText {
-          p {
-            margin-top: 5px !important;
-            margin-bottom: 18px !important;
-          }
-        }
-        .checkbox {
-          font-size: 12px;
-        }
-        .signup {
-          font-size: 30px !important;
-          margin: 30px 0 !important;
-        }
-        .signUpButton {
-          height: 40px !important;
-        }
-        .passwordone{
-          height: 40px !important;
-          font-size: 14px;
-          background-size: 20px 20px !important;
-          
-        }
-        .input {
-          height: 40px !important;
-          font-size: 14px;
+    .bottom {
+      width: 100%;
+      // .signin {
+      // width: 140px;
+      // }
+      p {
+        // width: 130px;
+        // font-size: 12px;
+        .hideText {
+          display: none;
         }
       }
-      // .bottom {
-        // width: 100%;
-        // .signin {
-          // width: 100px;
-        // }
-        // p {
-          // width: 100px;
-          // font-size: 7px;
-        // }
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .formSide {
+      width: 50% !important;
+      margin-left: 15px;
+      .password {
+        .eyeButton {
+          right: 6px;
+          top: 40px;
+        }
+      }
+    }
+    .imageSide {
+      width: 50% !important;
+    }
+    .input {
+      height: 40px !important;
+      font-size: 13px;
+    }
+  }
+  @media screen and (max-width: 576px) {
+    .formSide {
+      width: 100% !important;
+      padding-left: 20px;
+      // width: 100%;
+      // height: 100%;
+      // justify-content: center;
+      // // display: flex;
+      // flex-direction: column;
+      // align-items: center;
+    }
+    .imageSide {
+      display: none;
+    }
+    .bottom {
+      width: 100%;
+      // .signin {
+      // width: 140px;
+      // }
+      // p {
+      // width: 110px;
+      // font-size: 9px;
       // }
     }
   }
-  
-  // @media screen and  (max-width:600){
-  //   .formSide{
-  //     max-width: 100% !important;
-  //     .form{
-  //       max-width: 100% !important;
-  //     }
-  //   }
-  
-  // }
-  // @media screen and (max-width: 300px ) {
-  //   .formSide{
-  //     max-width: 100% !important;
-  
-  //   }
-  //   .input{
-  //     width: 100% !important;
-  //   }
-  //   .signup{
-  //     width: 290px;
-  //     height: 56px;
-  //   }
-  
-  // }
-  // @media screen and (max-width: 300px ) {
-  //   .formSide{
-  //     max-width: 100% !important;
-  //   }
-  //   }
-  //   @media screen and (max-width: 1300px ) {
-  //     .signin{
-  //       width: 150px;
-  //     }
-  //     }
-  
+  @media screen and (max-width: 400px) {
+    .formSide {
+      // margin-right: 12px;
+      padding: 13px;
+      .bottomText {
+        p {
+          margin-top: 5px !important;
+          margin-bottom: 18px !important;
+        }
+      }
+      .checkbox {
+        font-size: 12px;
+      }
+      .signup {
+        font-size: 30px !important;
+        margin: 30px 0 !important;
+      }
+      .signUpButton {
+        height: 40px !important;
+      }
+      .passwordone {
+        height: 40px !important;
+        font-size: 14px;
+        background-size: 20px 20px !important;
+      }
+      .input {
+        height: 40px !important;
+        font-size: 14px;
+      }
+    }
+    // .bottom {
+    // width: 100%;
+    // .signin {
+    // width: 100px;
+    // }
+    // p {
+    // width: 100px;
+    // font-size: 7px;
+    // }
+    // }
+  }
+}
+
+// @media screen and  (max-width:600){
+//   .formSide{
+//     max-width: 100% !important;
+//     .form{
+//       max-width: 100% !important;
+//     }
+//   }
+
+// }
+// @media screen and (max-width: 300px ) {
+//   .formSide{
+//     max-width: 100% !important;
+
+//   }
+//   .input{
+//     width: 100% !important;
+//   }
+//   .signup{
+//     width: 290px;
+//     height: 56px;
+//   }
+
+// }
+// @media screen and (max-width: 300px ) {
+//   .formSide{
+//     max-width: 100% !important;
+//   }
+//   }
+//   @media screen and (max-width: 1300px ) {
+//     .signin{
+//       width: 150px;
+//     }
+//     }
