--- a/component/signup/signup.module.scss
+++ b/component/signup/signup.module.scss
@@ -3,7 +3,7 @@
   // min-height: 100vh;
   max-width: 1440px;
   display: flex;
-  margin:0 auto;
+  margin: 0 auto;
   // flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -57,15 +57,16 @@
     height: 60%;
     width: 45%;
     padding-right: 30px;
-
-    // padding-bottom: 10px;
-    // background: yellow;
-    .eyebutton{
-      position: absolute;
-      top: 760px;
-      right: 65px;
-
+    .password {
+      position: relative;
+      .eyeButton {
+        position: absolute;
+        top: 52px;
+        cursor: pointer;
+        right: 8px;
+      }
     }
+
     .signUpLink {
       margin-bottom: 10px !important;
       text-align: center;
@@ -79,15 +80,15 @@
     }
     .textGreen {
       color: #6fd6a4 !important;
-      a{
+      a {
         text-decoration: none;
         color: #6fd6a4 !important;
       }
     }
-     .input {
-      background: #F8F8F8;
+    .input {
+      background: #f8f8f8;
 
-      max-width: 600px;
+      max-width: 700px;
       width: 100%;
       height: 64px;
     }
@@ -104,7 +105,7 @@
       background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
       margin-top: 24px;
       height: 64px;
-      max-width: 600px;
+      max-width: 700px;
     }
     .signup {
       // font-family: "Poppins" ;
@@ -171,21 +172,28 @@
     .bottom {
       width: 100%;
       // .signin {
-        // width: 140px;
+      // width: 140px;
       // }
       p {
         // width: 130px;
         // font-size: 12px;
-        .hideText{
+        .hideText {
           display: none;
         }
       }
     }
   }
   @media screen and (max-width: 768px) {
-    .formSide{
+    .formSide {
       width: 50% !important;
       // margin-left: 15px;
+
+      .password {
+        .eyeButton {
+          right: 6px;
+          top: 40px;
+        }
+      }
     }
     .imageSide {
       width: 50% !important;
@@ -195,12 +203,10 @@
       height: 40px !important;
       font-size: 15px;
     }
-  
-
   }
   @media screen and (max-width: 576px) {
     .formSide {
-       width: 100% !important;
+      width: 100% !important;
       padding: 10px;
       //  padding-left: 20px;
       // padding: 10px;
@@ -217,11 +223,11 @@
     .bottom {
       width: 100%;
       // .signin {
-        // width: 140px;
+      // width: 140px;
       // }
       // p {
-        // width: 110px;
-        // font-size: 9px;
+      // width: 110px;
+      // font-size: 9px;
       // }
     }
   }
@@ -245,21 +251,21 @@
       .signUpButton {
         height: 40px !important;
       }
- 
+
       .input {
         height: 40px !important;
         font-size: 14px;
       }
     }
     // .bottom {
-      // width: 100%;
-      // .signin {
-        // width: 100px;
-      // }
-      // p {
-        // width: 100px;
-        // font-size: 7px;
-      // }
+    // width: 100%;
+    // .signin {
+    // width: 100px;
+    // }
+    // p {
+    // width: 100px;
+    // font-size: 7px;
+    // }
     // }
   }
 }
