--- a/component/login/login.module.scss
+++ b/component/login/login.module.scss
@@ -1,67 +1,89 @@
 .container {
   // min-width: 100vw;
   // min-height: 100vh;
-  max-width: 1440px;
+  // max-width: 1440px;
   display: flex;
   margin: 0 auto;
   // flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-top: 40px;
+  // padding-top: 40px;
   // margin-top: 30px;
   // padding-bottom: 10px;
   // margin-bottom: 70px !important;
   .imageSide {
     // display: flex;
     // justify-content: center;
-    width: 50%;
+    width: 40%;
+    // height: 2000px;
+    background-image: url(../../public/images/login.png);
+    height: 100vh;
     // width: 100%;
     // align-items: center;
     // flex-direction: column;
-    .imageText {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      .imageTextOne {
-        font-weight: 600;
-      }
-      .imageTextTwo {
-        text-align: center;
-        // margin-right: 50px;
-        max-width: 636px;
-        height: 40px;
-      }
-    }
-    .image {
-      // justify-content: center;
-      // align-items: center;
-      //   display: flex;
-      // justify-content: center;
-      // align-items: center;
-      // flex-direction: row;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      // width: 100%;
-      max-width: 800px;
-      width: 100%;
-      margin-bottom: 200px;
-      // height: 700px;
-    }
+    // .imageText {
+    //   display: flex;
+    //   justify-content: center;
+    //   flex-direction: column;
+    //   align-items: center;
+    //   .imageTextOne {
+    //     font-weight: 600;
+    //   }
+    //   .imageTextTwo {
+    //     text-align: center;
+    //     // margin-right: 50px;
+    //     max-width: 636px;
+    //     height: 40px;
+    //   }
+    // }
+    // .image {
+    // max-width: 100%;
+    // height: auto;
+    // justify-content: center;
+    // align-items: center;
+    //   display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: row;
+    // display: flex;
+
+    // justify-content: center;
+    // align-items: center;
+    // height: 100vh;
+    // width: 100%;
+    // height: 100vh;
+    // width: 944.83px;
+    // height: 1619.71px;
+    // max-width: 800px;
+    // width: 100%;
+    // margin-bottom: 200px;
+    // height: 700px;
+    // .mediaImage {
+    //   max-width: 100%;
+    //   height: auto;
+    // }
+    // }
   }
   .formSide {
     // margin-top: 30px;
     // width: 50%;
     // width: 100%;
-    height: 60%;
-    width: 45%;
-    padding-right: 30px;
+    // height: 60%;
+    width: 60%;
+    padding: 70px;
+    // height: 100vh;
+
+    // padding-right: 30px;
 
     // padding-bottom: 10px;
     // background: yellow;
+    // .form {
+    //   width: 100%;
+    //   height: 100vh;
+    // }
     .password {
       position: relative;
+      max-width: 800px;
       .eyeButton {
         position: absolute;
         top: 52px;
@@ -70,14 +92,16 @@
       }
     }
     .signUpLink {
-      margin-bottom: 10px !important;
+      // margin-bottom: 10px !important;
       text-align: center;
       font-size: 15px;
     }
 
     .checkbox {
       font-size: 12px;
+      max-width: 800px;
       label {
+        // max-width: 800px;
         display: flex;
         justify-content: space-between;
       }
@@ -97,8 +121,8 @@
     .input {
       background: #f8f8f8;
 
-      max-width: 700px;
-      width: 100%;
+      max-width: 800px;
+      // width: 100%;
       height: 64px;
     }
     .label {
@@ -114,14 +138,14 @@
       background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
       margin-top: 24px;
       height: 64px;
-      max-width: 700px;
+      max-width: 800px;
     }
     .signup {
       // font-family: "Poppins" ;
       font-weight: 600;
       font-size: 40px;
       line-height: 48px;
-      margin: 60px 0;
+      margin: 30px 0;
     }
 
     .bottomText {
@@ -139,6 +163,7 @@
       //  display: inline-block;
       // width: 50%;
       display: flex;
+      max-width: 800px;
       // height: 56px;
       justify-content: space-between;
       margin-bottom: 40px;
@@ -167,18 +192,18 @@
     }
   }
   @media screen and (max-width: 1035px) {
-    .formSide {
-      .password {
-        .eyeButton {
-          right: 7px;
-        }
-      }
-    }
-    .imageSide {
-      width: 45% !important;
+    // .formSide {
+    //   .password {
+    //     .eyeButton {
+    // right: 7px;
+    //     }
+    // }
+    // }
+    // .imageSide {
+    // width: 45% !important;
 
-      // width: 100% !important;
-    }
+    // width: 100% !important;
+    // }
     .bottomText {
       p {
         margin-top: 10px !important;
@@ -201,8 +226,9 @@
   }
   @media screen and (max-width: 768px) {
     .formSide {
-      width: 50% !important;
+      // width: 50% !important;
       // margin-left: 15px;
+      padding: 70px 30px 70px 30px;
 
       .password {
         .eyeButton {
@@ -211,10 +237,10 @@
         }
       }
     }
-    .imageSide {
-      width: 50% !important;
-      padding: 10px;
-    }
+    // .imageSide {
+    // width: 50% !important;
+    // padding: 10px;
+    // }
     .input {
       height: 40px !important;
       font-size: 15px;
@@ -223,7 +249,7 @@
   @media screen and (max-width: 576px) {
     .formSide {
       width: 100% !important;
-      padding: 10px;
+      // padding: 10px;
       // width: 100%;
       // height: 100%;
       // justify-content: center;
