--- a/component/resetPassword/reset.module.scss
+++ b/component/resetPassword/reset.module.scss
@@ -1,64 +1,91 @@
 .container {
   // min-width: 100vw;
   // min-height: 100vh;
-  max-width: 1440px;
+  // max-width: 1440px;
   display: flex;
   margin: 0 auto;
   // flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding-top: 40px;
+  // padding-top: 40px;
   // margin-top: 30px;
   // padding-bottom: 10px;
   // margin-bottom: 70px !important;
   .imageSide {
     // display: flex;
     // justify-content: center;
-    width: 50%;
+    width: 40%;
+    background-image: url(../../public/images/login.png);
+    height: 100vh;
     // width: 100%;
     // align-items: center;
     // flex-direction: column;
-    .imageText {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      padding-bottom: 50px;
-      .imageTextOne {
-        font-weight: 600;
-      }
-      .imageTextTwo {
-        text-align: center;
-        margin-right: 50px;
-        max-width: 636px;
-        height: 40px;
-      }
-    }
-    .image {
-      // justify-content: center;
-      // align-items: center;
-      //   display: flex;
-      // justify-content: center;
-      // align-items: center;
-      // flex-direction: row;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      // width: 100%;
-      max-width: 800px;
-      width: 100%;
-      height: 700px;
-    }
+    // .imageText {
+    //   display: flex;
+    //   justify-content: center;
+    //   flex-direction: column;
+    //   align-items: center;
+    //   padding-bottom: 50px;
+    //   .imageTextOne {
+    //     font-weight: 600;
+    //   }
+    //   .imageTextTwo {
+    //     text-align: center;
+    //     margin-right: 50px;
+    //     max-width: 636px;
+    //     height: 40px;
+    //   }
+    // }
+    // .image {
+    // justify-content: center;
+    // align-items: center;
+    //   display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: row;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // width: 100%;
+    //   max-width: 800px;
+    //   width: 100%;
+    //   height: 700px;
+    // }
   }
   .formSide {
     // margin-top: 30px;
-    // width: 50%;
+    width: 60%;
+    height: 100vh;
+    padding: 70px;
+    display: flex;
+    flex-direction: column;
+    /* height: 100%; */
+    justify-content: center;
+    align-items: center;
+    // text-align: center;
+    // margin: auto;
+    // padding: auto;
+    // padding: 50px;
+
+    // padding: 70px;
     // width: 100%;
-    height: 60%;
-    width: 45%;
-    padding-right: 30px;
+    // .form {
+    // }
+    // height: 60%;
+    // width: 45%;
+    // padding-right: 30px;
+    // .formCenter {
+    // display: flex;
+    // flex-direction: column;
+    // // justify-content: center;
+    // align-items: center;
+
+    // margin: auto;
+    // justify-content: start;
+    // }
     .password {
       position: relative;
+      max-width: 800px;
       .eyeButton {
         position: absolute;
         top: 52px;
@@ -68,15 +95,16 @@
     }
 
     .loremText {
+      max-width: 800px;
       font-weight: 400;
       color: #94a3b8;
-      margin-bottom: 60px;
+      margin-bottom: 40px;
     }
 
     // padding-bottom: 10px;
     // background: yellow;
     .signUpLink {
-      margin-bottom: 10px !important;
+      // margin-bottom: 10px !important;
       text-align: center;
       font-size: 15px;
     }
@@ -93,21 +121,22 @@
     .textGreen {
       color: #6fd6a4;
     }
-    .passwordone {
-      background: url(/images/ShowIcon.png);
-      background-repeat: no-repeat;
-      background-size: 24px 24px !important;
-      background-position: right;
-      background-color: #f8f8f8;
-      max-width: 600px;
-      width: 100%;
-      height: 64px;
-    }
+    // .passwordone {
+    //   background: url(/images/ShowIcon.png);
+    //   background-repeat: no-repeat;
+    //   background-size: 24px 24px !important;
+    //   background-position: right;
+    //   background-color: #f8f8f8;
+    //   max-width: 600px;
+    //   width: 100%;
+    //   height: 64px;
+    // }
     .input {
       background: #f8f8f8;
+      max-width: 800px;
 
-      max-width: 700px;
-      width: 100%;
+      // max-width: 700px;
+      // width: 100%;
       height: 64px;
     }
     .label {
@@ -121,17 +150,18 @@
       text-align: center;
       font-weight: bold;
       background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
-      margin-top: 300px;
+      margin-top: 40px;
       height: 64px;
-      margin-bottom: 30px;
-      max-width: 700px;
+      max-width: 800px;
+      // margin-bottom: 300px;
+      // max-width: 700px;
     }
     .signup {
       // font-family: "Poppins" ;
       font-weight: 600;
       font-size: 40px;
       line-height: 48px;
-      margin: 40px 0;
+      margin: 30px 0;
     }
 
     .bottomText {
@@ -139,10 +169,10 @@
       justify-content: center;
       margin-top: 40px;
       color: #949494;
-      p {
-        margin-top: 40px;
-        margin-bottom: 58px;
-      }
+      // p {
+      // margin-top: 40px;
+      // margin-bottom: 58px;
+      // }
     }
 
     .bottom {
@@ -151,14 +181,14 @@
       display: flex;
       // height: 56px;
       justify-content: space-between;
-      margin-bottom: 40px;
+      // margin-bottom: 40px;
       // padding-right: 30px;
 
       .signin {
         background-color: #f8f8f8;
         // max-width: 50%;
         // width: 100%;
-        height: 56px;
+        // height: 56px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -176,12 +206,21 @@
       }
     }
   }
+  // @media screen and(min-width:1440px) {
+  //   .formSide {
+  //     display: flex;
+  //     flex-direction: column;
+  //     /* height: 100%; */
+  //     justify-content: center;
+  //     align-items: center;
+  //   }
+  // }
   @media screen and (max-width: 1035px) {
-    .imageSide {
-      width: 45% !important;
+    // .imageSide {
+    // width: 45% !important;
 
-      // width: 100% !important;
-    }
+    // width: 100% !important;
+    // }
     .bottomText {
       p {
         margin-top: 10px !important;
@@ -204,8 +243,9 @@
   }
   @media screen and (max-width: 768px) {
     .formSide {
-      width: 50% !important;
-      margin-left: 15px;
+      // width: 50% !important;
+      // margin-left: 15px;
+      padding: 70px 30px 70px 30px;
       .password {
         .eyeButton {
           right: 6px;
@@ -213,18 +253,18 @@
         }
       }
     }
-    .imageSide {
-      width: 50% !important;
-    }
+    // .imageSide {
+    //   width: 50% !important;
+    // }
     .input {
       height: 40px !important;
-      font-size: 13px;
+      // font-size: 13px;
     }
   }
   @media screen and (max-width: 576px) {
     .formSide {
       width: 100% !important;
-      padding-left: 20px;
+      // padding-left: 20px;
       // width: 100%;
       // height: 100%;
       // justify-content: center;
