--- a/component/signup/signup.module.scss
+++ b/component/signup/signup.module.scss
@@ -1,63 +1,67 @@
 .container {
   // min-width: 100vw;
   // min-height: 100vh;
-  max-width: 1440px;
+  // max-width: 1440px;
   display: flex;
   margin: 0 auto;
   // flex-direction: row;
   justify-content: center;
-  align-items: center;
-  padding-top: 40px;
+  // align-items: center;
+  // padding-top: 40px;
   // margin-top: 30px;
   // padding-bottom: 10px;
   // margin-bottom: 70px !important;
   .imageSide {
     // display: flex;
     // justify-content: center;
-    width: 50%;
+    background-image: url(../../public/images/login.png);
+    height: auto;
+    width: 40%;
     // width: 100%;
     // align-items: center;
     // flex-direction: column;
-    .imageText {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      align-items: center;
-      .imageTextOne {
-        font-weight: 600;
-      }
-      .imageTextTwo {
-        text-align: center;
-        margin-right: 50px;
-        max-width: 636px;
-        height: 40px;
-      }
-    }
-    .image {
-      // justify-content: center;
-      // align-items: center;
-      //   display: flex;
-      // justify-content: center;
-      // align-items: center;
-      // flex-direction: row;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      // width: 100%;
-      max-width: 800px;
-      width: 100%;
-      margin-bottom: 200px;
-      // height: 800px;
-    }
+    // .imageText {
+    //   display: flex;
+    //   justify-content: center;
+    //   flex-direction: column;
+    //   align-items: center;
+    //   .imageTextOne {
+    //     font-weight: 600;
+    //   }
+    //   .imageTextTwo {
+    //     text-align: center;
+    //     margin-right: 50px;
+    //     max-width: 636px;
+    //     height: 40px;
+    //   }
+    // }
+    // .image {
+    // justify-content: center;
+    // align-items: center;
+    //   display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // flex-direction: row;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // width: 100%;
+    // max-width: 800px;
+    // width: 100%;
+    // margin-bottom: 200px;
+    // height: 800px;
+    // }
   }
   .formSide {
     // margin-top: 30px;
     // width: 50%;
     // width: 100%;
-    height: 60%;
-    width: 45%;
-    padding-right: 30px;
+    // height: 60%;
+    width: 60%;
+    padding: 70px;
+    // padding-right: 30px;
     .password {
+      max-width: 800px;
       position: relative;
       .eyeButton {
         position: absolute;
@@ -68,12 +72,13 @@
     }
 
     .signUpLink {
-      margin-bottom: 10px !important;
+      // margin-bottom: 10px !important;
       text-align: center;
       font-size: 15px;
     }
     .checkbox {
       font-size: 12px;
+      max-width: 800px;
       input {
         border: 1px solid rgba(255, 57, 81, 1) !important;
       }
@@ -87,9 +92,10 @@
     }
     .input {
       background: #f8f8f8;
+      max-width: 800px;
 
-      max-width: 700px;
-      width: 100%;
+      // max-width: 700px;
+      // width: 100%;
       height: 64px;
     }
     .label {
@@ -103,16 +109,17 @@
       text-align: center;
       font-weight: bold;
       background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
-      margin-top: 24px;
+      // margin-top: 24px;
       height: 64px;
-      max-width: 700px;
+      max-width: 800px;
+      // max-width: 700px;
     }
     .signup {
       // font-family: "Poppins" ;
       font-weight: 600;
       font-size: 40px;
-      line-height: 48px;
-      margin: 60px 0;
+      // line-height: 48px;
+      margin: 10px 0;
     }
 
     .bottomText {
@@ -120,19 +127,20 @@
       justify-content: center;
       margin-top: 40px;
       color: #949494;
-      p {
-        margin-top: 40px;
-        margin-bottom: 58px;
-      }
+      // p {
+      // margin-top: 40px;
+      // margin-bottom: 58px;
+      // }
     }
 
     .bottom {
       //  display: inline-block;
       // width: 50%;
       display: flex;
+      max-width: 800px;
       // height: 56px;
       justify-content: space-between;
-      margin-bottom: 40px;
+      margin-bottom: 30px;
       // padding-right: 30px;
 
       .signin {
@@ -158,11 +166,11 @@
     }
   }
   @media screen and (max-width: 1035px) {
-    .imageSide {
-      width: 45% !important;
+    // .imageSide {
+    // width: 45% !important;
 
-      // width: 100% !important;
-    }
+    // width: 100% !important;
+    // }
     .bottomText {
       p {
         margin-top: 10px !important;
@@ -185,8 +193,9 @@
   }
   @media screen and (max-width: 768px) {
     .formSide {
-      width: 50% !important;
+      // width: 50% !important;
       // margin-left: 15px;
+      padding: 70px 30px 70px 30px;
 
       .password {
         .eyeButton {
@@ -195,10 +204,10 @@
         }
       }
     }
-    .imageSide {
-      width: 50% !important;
-      padding: 10px;
-    }
+    // .imageSide {
+    // width: 50% !important;
+    // padding: 10px;
+    // }
     .input {
       height: 40px !important;
       font-size: 15px;
@@ -234,7 +243,7 @@
   @media screen and (max-width: 400px) {
     .formSide {
       // margin-right: 12px;
-      padding: 13px;
+      // padding: 13px;
       .bottomText {
         p {
           margin-top: 5px !important;
