--- a/component/signup/signup.module.scss
+++ b/component/signup/signup.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   margin: 0 auto;
   // flex-direction: row;
-  justify-content: center;
+  // justify-content: center;
   // align-items: center;
   // padding-top: 40px;
   // margin-top: 30px;
@@ -15,7 +15,8 @@
     // display: flex;
     // justify-content: center;
     background-image: url(../../public/images/login.png);
-    height: auto;
+    background-size: cover;
+    min-height: 100vh;
     width: 40%;
     // width: 100%;
     // align-items: center;
@@ -59,13 +60,28 @@
     // height: 60%;
     width: 60%;
     padding: 70px;
+    // height: 100vh;
+
     // padding-right: 30px;
+    .form {
+      max-width: 800px !important;
+      margin: 0 auto;
+      // display: flex;
+      // flex-direction: column;
+      // align-items: center;
+      // justify-content: center;
+      // height: 100vh;
+      // overflow-y: scroll;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
+    }
     .password {
       max-width: 800px;
       position: relative;
       .eyeButton {
         position: absolute;
-        top: 52px;
+        top: 45px;
         cursor: pointer;
         right: 8px;
       }
@@ -75,9 +91,10 @@
       // margin-bottom: 10px !important;
       text-align: center;
       font-size: 15px;
+      max-width: 800px;
     }
     .checkbox {
-      font-size: 12px;
+      // font-size: 12px;
       max-width: 800px;
       input {
         border: 1px solid rgba(255, 57, 81, 1) !important;
@@ -96,7 +113,7 @@
 
       // max-width: 700px;
       // width: 100%;
-      height: 64px;
+      height: 50px;
     }
     .label {
       font-size: 16px !important;
@@ -110,7 +127,7 @@
       font-weight: bold;
       background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
       // margin-top: 24px;
-      height: 64px;
+      height: 50px;
       max-width: 800px;
       // max-width: 700px;
     }
@@ -127,6 +144,7 @@
       justify-content: center;
       margin-top: 40px;
       color: #949494;
+      max-width: 800px;
       // p {
       // margin-top: 40px;
       // margin-bottom: 58px;
@@ -166,6 +184,9 @@
     }
   }
   @media screen and (max-width: 1035px) {
+    .checkbox {
+      font-size: 13px;
+    }
     // .imageSide {
     // width: 45% !important;
 
