--- a/component/login/login.module.scss
+++ b/component/login/login.module.scss
@@ -219,17 +219,16 @@
       // padding-right: 30px;
 
       .signin {
-        max-width: 800px;
-        background-color: #f8f8f8;
-        // max-width: 50%;
-        // width: 100%;
-        height: 56px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 10px;
-
         button {
+          max-width: 800px;
+          background-color: #f8f8f8;
+          // max-width: 50%;
+          // width: 100%;
+          height: 56px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius: 10px;
           display: flex;
           max-width: 800px;
           align-items: center;
@@ -241,11 +240,13 @@
         }
       }
       .apple {
-        background: none;
+        // background: none;
         // border-radius: 10px;
         // outline: olivedrab !important;
-        border: 0.5px solid #f9445b;
+        // border: 0.5px solid #f9445b;
         button {
+          border: 0.5px solid #ffe9eb;
+          // border-radius: 10px;
           background: none;
           // border-radius: 10px;
         }
