--- a/component/login/login.module.scss
+++ b/component/login/login.module.scss
@@ -206,7 +206,10 @@
       line-height: 48px;
       margin: 30px 0;
     }
-
+    .error {
+      color: red;
+      // background-color: red;
+    }
     .bottom {
       //  display: inline-block;
       // width: 50%;
