--- a/component/forgotPassword/forgot.module.scss
+++ b/component/forgotPassword/forgot.module.scss
@@ -153,7 +153,10 @@
       line-height: 48px;
       margin: 30px 0;
     }
-
+    .error {
+      color: red;
+      // background-color: red;
+    }
     .bottomText {
       display: flex;
       justify-content: center;
