--- a/component/resetPassword/reset.module.scss
+++ b/component/resetPassword/reset.module.scss
@@ -178,7 +178,10 @@
       line-height: 48px;
       margin: 30px 0;
     }
-
+    .error {
+      color: red;
+      // background-color: red;
+    }
     .bottomText {
       display: flex;
       justify-content: center;
