--- a/component/forgotPassword/forgot.module.scss
+++ b/component/forgotPassword/forgot.module.scss
@@ -57,12 +57,26 @@
     //   // height: 700px;
     // }
   }
+  .main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 60%;
+    .topBar {
+      display: none;
+      width: 100%;
+      height: 30px;
+      background-image: url(../../public/images/login.png);
+      background-size: cover;
+    }
+  }
   .formSide {
     // margin-top: 30px;
     // width: 50%;
     // width: 100%;
     // height: 60%;
-    width: 65%;
+    width: 100%;
     padding: 40px;
     // display: flex;
     // height: 100vh;
@@ -83,118 +97,119 @@
       position: relative;
       top: 50%;
       transform: translateY(-50%);
-    }
-    .loremText {
-      max-width: 800px;
-      font-weight: 400;
-      color: #94a3b8;
-      margin-bottom: 40px;
-    }
 
-    // padding-bottom: 10px;
-    // background: yellow;
-    .signUpLink {
-      // margin-bottom: 10px !important;
-      text-align: center;
-      font-size: 15px;
-    }
-    .checkbox {
-      font-size: 12px;
-      label {
-        display: flex;
-        justify-content: space-between;
+      .loremText {
+        max-width: 800px;
+        font-weight: 400;
+        color: #94a3b8;
+        margin-bottom: 40px;
       }
-      input {
-        border: 1px solid rgba(255, 57, 81, 1) !important;
-      }
-    }
-    .textGreen {
-      color: #6fd6a4;
-    }
-    // .passwordone {
-    //   background: url(/images/ShowIcon.png);
-    //   background-repeat: no-repeat;
-    //   background-size: 24px 24px !important;
-    //   background-position: right;
-    //   background-color: #f8f8f8;
-    //   max-width: 600px;
-    //   width: 100%;
-    //   height: 64px;
-    // }
-    .input {
-      background: #f8f8f8;
-      max-width: 800px;
-      // max-width: 600px;
-      // width: 100%;
-      height: 50px;
-    }
-    .label {
-      font-size: 16px !important;
-      font-weight: bold;
-    }
 
-    .signUpButton {
-      width: 100% !important;
-      border-radius: 8px !important;
-      text-align: center;
-      font-weight: bold;
-      background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
-      margin-top: 24px;
-      height: 50px;
-      max-width: 800px;
-      border: none;
-      // max-width: 600px;
-      // margin-top: 300px;
-    }
-    .signup {
-      // font-family: "Poppins" ;
-      font-weight: 600;
-      font-size: 40px;
-      line-height: 48px;
-      margin: 30px 0;
-    }
-    .error {
-      color: red;
-      // background-color: red;
-    }
-    .bottomText {
-      display: flex;
-      justify-content: center;
-      margin-top: 40px;
-      color: #949494;
-      // p {
-      //   margin-top: 40px;
-      //   margin-bottom: 58px;
+      // padding-bottom: 10px;
+      // background: yellow;
+      .signUpLink {
+        // margin-bottom: 10px !important;
+        text-align: center;
+        font-size: 15px;
+      }
+      .checkbox {
+        font-size: 12px;
+        label {
+          display: flex;
+          justify-content: space-between;
+        }
+        input {
+          border: 1px solid rgba(255, 57, 81, 1) !important;
+        }
+      }
+      .textGreen {
+        color: #6fd6a4;
+      }
+      // .passwordone {
+      //   background: url(/images/ShowIcon.png);
+      //   background-repeat: no-repeat;
+      //   background-size: 24px 24px !important;
+      //   background-position: right;
+      //   background-color: #f8f8f8;
+      //   max-width: 600px;
+      //   width: 100%;
+      //   height: 64px;
       // }
-    }
-
-    .bottom {
-      //  display: inline-block;
-      // width: 50%;
-      display: flex;
-      // height: 56px;
-      justify-content: space-between;
-      // margin-bottom: 40px;
-      // padding-right: 30px;
-
-      .signin {
-        background-color: #f8f8f8;
-        // max-width: 50%;
+      .input {
+        background: #f8f8f8;
+        max-width: 800px;
+        // max-width: 600px;
         // width: 100%;
-        height: 56px;
+        height: 50px;
+      }
+      .label {
+        font-size: 16px !important;
+        font-weight: bold;
+      }
+
+      .signUpButton {
+        width: 100% !important;
+        border-radius: 8px !important;
+        text-align: center;
+        font-weight: bold;
+        background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
+        margin-top: 24px;
+        height: 50px;
+        max-width: 800px;
+        border: none;
+        // max-width: 600px;
+        // margin-top: 300px;
+      }
+      .signup {
+        // font-family: "Poppins" ;
+        font-weight: 600;
+        font-size: 40px;
+        line-height: 48px;
+        margin: 30px 0;
+      }
+      .error {
+        color: red;
+        // background-color: red;
+      }
+      .bottomText {
         display: flex;
         justify-content: center;
-        align-items: center;
+        margin-top: 40px;
+        color: #949494;
+        // p {
+        //   margin-top: 40px;
+        //   margin-bottom: 58px;
+        // }
+      }
 
-        button {
+      .bottom {
+        //  display: inline-block;
+        // width: 50%;
+        display: flex;
+        // height: 56px;
+        justify-content: space-between;
+        // margin-bottom: 40px;
+        // padding-right: 30px;
+
+        .signin {
+          background-color: #f8f8f8;
+          // max-width: 50%;
+          // width: 100%;
+          height: 56px;
           display: flex;
-
+          justify-content: center;
           align-items: center;
-        }
-        p {
-          font-weight: bold;
-          margin: 0;
-          padding-left: 10px;
+
+          button {
+            display: flex;
+
+            align-items: center;
+          }
+          p {
+            font-weight: bold;
+            margin: 0;
+            padding-left: 10px;
+          }
         }
       }
     }
@@ -244,6 +259,12 @@
     }
   }
   @media screen and (max-width: 576px) {
+    .main {
+      width: 100%;
+      .topBar {
+        display: block;
+      }
+    }
     .formSide {
       width: 100% !important;
       padding: 10px;
