--- a/component/login/login.module.scss
+++ b/component/login/login.module.scss
@@ -68,12 +68,26 @@
     // }
     // }
   }
+  .main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 60%;
+    .topBar {
+      display: none;
+      width: 100%;
+      height: 30px;
+      background-image: url(../../public/images/login.png);
+      background-size: cover;
+    }
+  }
   .formSide {
     // margin-top: 30px;
     // width: 50%;
     // width: 100%;
     // height: 60%;
-    width: 60%;
+    width: 100%;
     padding: 70px;
     // height: auto;
     // overflow-y: scroll;
@@ -117,141 +131,142 @@
           // }
         }
       }
-    }
-
-    // display: flex;
-    // flex-direction: column;
-    /* height: 100%; */
-    // justify-content: center;
-    // align-items: center;
-    // padding-right: 30px;
-
-    // padding-bottom: 10px;
-    // background: yellow;
-    // .form {
-    //   width: 100%;
-    //   height: 100vh;
-
-    // }
-
-    .password {
-      position: relative;
-      max-width: 800px;
-      .eyeButton {
-        position: absolute;
-        top: 45px;
-        cursor: pointer;
-        right: 8px;
+      .error {
+        color: red;
+        // background-color: red;
       }
-    }
-    .signUpLink {
-      // margin-bottom: 10px !important;
-      text-align: center;
-      font-size: 15px;
-      max-width: 800px;
-    }
 
-    .checkbox {
-      // font-size: 12px;
-      max-width: 800px;
-      input {
-        border: 1px solid rgba(255, 57, 81, 1) !important;
-      }
-      input:checked {
-        background-color: #f9445b;
-      }
-      label {
-        // max-width: 800px;
-        display: flex;
-        justify-content: space-between;
-      }
-    }
-    .textGreen {
-      // color: #6fd6a4 !important;
-      a {
-        max-width: 800px;
-        text-decoration: none;
-        color: #6fd6a4 !important;
-      }
-    }
-
-    .input {
-      background: #f8f8f8;
-      // border: none;
-      max-width: 800px;
-      // width: 100%;
-      height: 50px;
-    }
-
-    .label {
-      font-size: 16px !important;
-      font-weight: bold;
-    }
-
-    .signUpButton {
-      width: 100% !important;
-      border-radius: 8px !important;
-      text-align: center;
-      font-weight: bold;
-      background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
-      margin-top: 24px;
-      height: 50px;
-      max-width: 800px;
-      border: none;
-    }
-    .signup {
-      // font-family: "Poppins" ;
-      font-weight: 600;
-      font-size: 40px;
-      line-height: 48px;
-      margin: 30px 0;
-    }
-    .error {
-      color: red;
-      // background-color: red;
-    }
-    .bottom {
-      //  display: inline-block;
-      // width: 50%;
-      display: flex;
-      max-width: 800px;
-      // height: 56px;
-      justify-content: space-around;
-      margin-bottom: 30px;
-
+      // display: flex;
+      // flex-direction: column;
+      /* height: 100%; */
+      // justify-content: center;
+      // align-items: center;
       // padding-right: 30px;
 
-      .signin {
-        button {
-          max-width: 800px;
-          background-color: #f8f8f8;
-          // max-width: 50%;
-          // width: 100%;
-          height: 56px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          border-radius: 10px;
-          display: flex;
-          max-width: 800px;
-          align-items: center;
-        }
-        p {
-          font-weight: bold;
-          margin: 0;
-          padding-left: 10px;
+      // padding-bottom: 10px;
+      // background: yellow;
+      // .form {
+      //   width: 100%;
+      //   height: 100vh;
+
+      // }
+
+      .password {
+        position: relative;
+        max-width: 800px;
+        .eyeButton {
+          position: absolute;
+          top: 45px;
+          cursor: pointer;
+          right: 8px;
         }
       }
-      .apple {
-        // background: none;
-        // border-radius: 10px;
-        // outline: olivedrab !important;
-        // border: 0.5px solid #f9445b;
-        button {
-          border: 0.5px solid #ffe9eb;
+      .signUpLink {
+        // margin-bottom: 10px !important;
+        text-align: center;
+        font-size: 15px;
+        max-width: 800px;
+      }
+
+      .checkbox {
+        // font-size: 12px;
+        max-width: 800px;
+        input {
+          border: 1px solid rgba(255, 57, 81, 1) !important;
+        }
+        input:checked {
+          background-color: #f9445b;
+        }
+        label {
+          // max-width: 800px;
+          display: flex;
+          justify-content: space-between;
+        }
+      }
+      .textGreen {
+        // color: #6fd6a4 !important;
+        a {
+          max-width: 800px;
+          text-decoration: none;
+          color: #6fd6a4 !important;
+        }
+      }
+
+      .input {
+        background: #f8f8f8;
+        // border: none;
+        max-width: 800px;
+        // width: 100%;
+        height: 50px;
+      }
+
+      .label {
+        font-size: 16px !important;
+        font-weight: bold;
+      }
+
+      .signUpButton {
+        width: 100% !important;
+        border-radius: 8px !important;
+        text-align: center;
+        font-weight: bold;
+        background: linear-gradient(91.11deg, #fe5e71 -5.39%, #ff3951 104.71%);
+        margin-top: 24px;
+        height: 50px;
+        max-width: 800px;
+        border: none;
+      }
+      .signup {
+        // font-family: "Poppins" ;
+        font-weight: 600;
+        font-size: 40px;
+        line-height: 48px;
+        margin: 30px 0;
+      }
+
+      .bottom {
+        //  display: inline-block;
+        // width: 50%;
+        display: flex;
+        max-width: 800px;
+        // height: 56px;
+        justify-content: space-around;
+        margin-bottom: 30px;
+
+        // padding-right: 30px;
+
+        .signin {
+          button {
+            max-width: 800px;
+            background-color: #f8f8f8;
+            // max-width: 50%;
+            // width: 100%;
+            height: 56px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 10px;
+            display: flex;
+            max-width: 800px;
+            align-items: center;
+          }
+          p {
+            font-weight: bold;
+            margin: 0;
+            padding-left: 10px;
+          }
+        }
+        .apple {
+          // background: none;
           // border-radius: 10px;
-          background: none;
-          // border-radius: 10px;
+          // outline: olivedrab !important;
+          // border: 0.5px solid #f9445b;
+          button {
+            border: 0.5px solid #ffe9eb;
+            // border-radius: 10px;
+            background: none;
+            // border-radius: 10px;
+          }
         }
       }
     }
@@ -325,6 +340,12 @@
     }
   }
   @media screen and (max-width: 576px) {
+    .main {
+      width: 100%;
+      .topBar {
+        display: block;
+      }
+    }
     .formSide {
       width: 100% !important;
       padding: 10px;
