--- a/component/resetPassword/reset.module.scss
+++ b/component/resetPassword/reset.module.scss
@@ -53,9 +53,23 @@
     //   height: 700px;
     // }
   }
+  .main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 60%;
+    .topBar {
+      display: none;
+      width: 100%;
+      height: 30px;
+      background-image: url(../../public/images/login.png);
+      background-size: cover;
+    }
+  }
   .formSide {
     // margin-top: 30px;
-    width: 60%;
+    width: 100%;
     // height: 100vh;
     padding: 40px;
     // display: flex;
@@ -280,6 +294,12 @@
     }
   }
   @media screen and (max-width: 576px) {
+    .main {
+      width: 100%;
+      .topBar {
+        display: block;
+      }
+    }
     .formSide {
       width: 100% !important;
       // margin: 0 auto;
