--- a/styles/scss/idex.scss
+++ b/styles/scss/idex.scss
@@ -1,1 +1,3 @@
 @import "../../component/dashBoard/dashBoard.scss";
+@import "../../component/reUsabelComponent/dashBoard/dashBoardStories/dashBoardStories.scss";
+@import "../../component/reUsabelComponent/dashBoard/dashBoardPost/dashBoardPost.scss"
