--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -8,14 +8,49 @@
     }
     .container {
         margin: 0 auto;
-        max-width: 1280px;
-        min-width: 1280px;
+        max-width: 1158px;
+        max-height: 964px;
+        margin-top: -30px;
+        // overflow: auto;
+        // min-width: 1280px;
         .page {
             width: 100%;
             height: 100%;
             border: 1px solid rgba(0, 0, 0, 0.07);
             border-radius: 20px;
+            // display: flex;
+            // justify-content:center;
             box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.07);
+            // padding:152px  ;
+            display: flex;
+            .left-side {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                // justify-content:space-between;
+                padding: 40px 80px 30px;
+                width: 60%;
+                // height: 964px;
+
+                .status {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-around;
+                    width: 580px;
+                    height: 140px;
+                }
+                .post {
+                    margin-top: 30px;
+                }
+            }
+            .right-side{
+                width:40%;
+
+                
+                
+                
+
+            }
         }
     }
     .ant-layout-sider-children {
