--- a/styles/scss/idex.scss
+++ b/styles/scss/idex.scss
@@ -1,3 +1,5 @@
 @import "../../component/dashBoard/dashBoard.scss";
 @import "../../component/reUsabelComponent/dashBoard/dashBoardStories/dashBoardStories.scss";
-@import "../../component/reUsabelComponent/dashBoard/dashBoardPost/dashBoardPost.scss"
+@import "../../component/reUsabelComponent/dashBoard/dashBoardPost/dashBoardPost.scss";
+@import "../../component/reUsabelComponent/dashBoard/dashBoardSponsored/dashboardSponsored.scss";
+@import "../../component/reUsabelComponent/dashBoard/dashBoardRequest/dashBoardRequest.scss";
