--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -1,16 +1,38 @@
 .layout {
     min-height: 100vh !important;
+    // background: #ffffff !important;
     .slider {
         background: none;
+        // background: #fbfbfb;
     }
-    .header {
-        background: none;
+    .logo {
+        position: fixed;
+        top: 32px;
+        left: 30px;
     }
+    .menu {
+        background: #fbfbfb !important;
+        border-radius: 16px;
+    }
+    .ant-layout-sider-children {
+        display: flex;
+        // align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+    }
+    .ant-layout-sider-trigger {
+        display: none;
+    }
+    // .ant-menu {
+    //     background: rgba(251, 251, 251, 1);
+    // }
     .container {
         margin: 0 auto;
         max-width: 1158px;
         max-height: 964px;
-        margin-top: -30px;
+        margin-top: 30px;
+        // background: #ffffff !important;
         // overflow: auto;
         // min-width: 1280px;
         .page {
@@ -20,10 +42,19 @@
             border-radius: 20px;
             // display: flex;
             // justify-content:center;
+            overflow: scroll;
+
             box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.07);
             // padding:152px  ;
             display: flex;
+            &::-webkit-scrollbar {
+                display: none;
+            }
             .left-side {
+                // position: fixed;
+                // top: 20px;
+
+                // left: 500px;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -43,27 +74,40 @@
                     margin-top: 30px;
                 }
             }
-            .right-side{
-                width:40%;
+            .right-side {
+                width: 40%;
+                // position: fixed;
+                // right: 0px;
+                position: relative;
+                // padding: 40px 80px 30px;
+                .scroll {
+                    position: fixed;
+                    top: 30px;
+                }
 
-                
-                
-                
-
+                .request {
+                    width: 360px;
+                    display: flex;
+                    justify-content: space-between;
+                    margin-top: 34px;
+                    p {
+                        color: rgba(1, 0, 16, 1);
+                        opacity: 0.5;
+                    }
+                    .circle {
+                        background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
+                        width: 24px;
+                        height: 24px;
+                        -moz-border-radius: 50px;
+                        -webkit-border-radius: 50px;
+                        border-radius: 50px;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        color: white;
+                    }
+                }
             }
         }
-    }
-    .ant-layout-sider-children {
-        display: flex;
-        // align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        overflow: hidden;
-    }
-    .ant-layout-sider-trigger {
-        display: none;
-    }
-    .ant-menu {
-        background: rgba(251, 251, 251, 1);
     }
 }
