--- a/component/reUsabelComponent/dashBoard/dashBoardPost/dashBoardPost.scss
+++ b/component/reUsabelComponent/dashBoard/dashBoardPost/dashBoardPost.scss
@@ -1,6 +1,6 @@
 .post-main {
     // display: flex;
-    
+
     max-width: 580px;
     // height: 504px;
     // width: 100px;
@@ -23,6 +23,16 @@
                 display: flex;
                 justify-content: center;
             }
+            .post-profile-color {
+                max-width: 60px;
+                max-height: 60px;
+                border: 3px solid #fe5e71;
+
+                border-radius: 10px;
+                margin: 0px 10px;
+                display: flex;
+                justify-content: center;
+            }
             .name {
                 display: flex;
                 justify-content: center;
@@ -40,36 +50,36 @@
             max-height: 30px;
         }
     }
-    .bottom{
+    .bottom {
         display: flex;
-        
-        .heart{
+
+        .heart {
             display: flex;
-        .heartIcon{
+            .heartIcon {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                max-width: 24px;
+                max-height: 24px;
+            }
+
+            p {
+                color: #bfbfbf;
+                margin: 0px 4px;
+            }
+        }
+        .views {
             display: flex;
-            justify-content: center;
-            align-items: center;
-            max-width: 24px;
-            max-height:24px;
-        }
-                
-          p{
-            color: #BFBFBF;
-            margin: 0px 4px;
-          }  
-        }
-        .views{
-            display: flex;    
             margin-left: 24px;
-            .viewsIcon{
+            .viewsIcon {
                 display: flex;
                 justify-content: center;
                 // align-items: center;
                 max-width: 24px;
-                max-height:24px;
+                max-height: 24px;
             }
-            p{
-                color: #BFBFBF;
+            p {
+                color: #bfbfbf;
                 margin: 0px 4px;
             }
         }
