--- a/styles/scss/idex.scss
+++ b/styles/scss/idex.scss
@@ -3,3 +3,4 @@
 @import "../../component/reUsabelComponent/dashBoard/dashBoardPost/dashBoardPost.scss";
 @import "../../component/reUsabelComponent/dashBoard/dashBoardSponsored/dashboardSponsored.scss";
 @import "../../component/reUsabelComponent/dashBoard/dashBoardRequest/dashBoardRequest.scss";
+@import "../../component/reUsabelComponent/dashBoard/dashboardIcons/icons.scss";
