--- a/component/reUsabelComponent/dashBoard/dashBoardStories/dashBoardStories.scss
+++ b/component/reUsabelComponent/dashBoard/dashBoardStories/dashBoardStories.scss
@@ -1,7 +1,9 @@
 .main {
+    background: url("/images/dashboard/story1.png");
     width: 100px;
+    // width: 100%;
     height: 140px;
-    border: 1px solid black;
+    // border: 1px solid black;
     // padding:152px 75px 0 75px
     border-radius: 16px;
     position: relative;
@@ -17,8 +19,13 @@
         left: 12px;
     }
     .name {
+        max-width: 50px;
         position: absolute;
+        color: white;
         top: 96px;
         left: 12px;
+        font-size: 12px;
+        line-height: 16px;
+        font-weight: 600;
     }
 }
