--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -150,88 +150,19 @@
         // min-width: 1280px;
 
         .page {
-            // width: 100wh;
+            width: 100wh;
             max-height: 100vh;
             border: 1px solid rgba(0, 0, 0, 0.07);
             border-radius: 20px;
             // margin-top: 30px;
             // background: #ffffff;
-            display: flex;
+            // display: flex;
+            // justify-content: center;
             // display: flex;
             // justify-content:center;
 
             box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.07);
             // padding:152px  ;
-
-            .left-side {
-                overflow: scroll;
-                // position: fixed;
-                // top: 20px;
-                // height: 100vh;
-                // left: 500px;
-                // display: flex;
-                flex-direction: column;
-                align-items: center;
-                // justify-content:space-between;
-                // padding: 40px 80px 30px;
-                width: 60%;
-                // height: 964px;
-                .toggel {
-                    margin: 30px 0 32px 0;
-                }
-
-                .status {
-                    // overflow-x: scroll;
-                    display: flex;
-                    flex-direction: row;
-                    justify-content: space-around;
-                    width: 580px;
-                    height: 140px;
-                    // overflow: hidden;
-                }
-                .post {
-                    margin-top: 30px;
-                }
-                display: flex;
-                &::-webkit-scrollbar {
-                    display: none;
-                }
-            }
-            .right-side {
-                width: 40%;
-                // height: 100vh;
-                overflow: scroll;
-                // position: fixed;
-                // right: 0px;
-                // position: relative;
-                // padding: 40px 80px 30px;
-                &::-webkit-scrollbar {
-                    display: none;
-                }
-
-                .request {
-                    width: 360px;
-                    display: flex;
-                    justify-content: space-between;
-                    margin-top: 34px;
-                    p {
-                        color: rgba(1, 0, 16, 1);
-                        opacity: 0.5;
-                    }
-                    .circle {
-                        background: linear-gradient(90deg, #6dd7a4 0%, #3ec684 100%);
-                        width: 24px;
-                        height: 24px;
-                        -moz-border-radius: 50px;
-                        -webkit-border-radius: 50px;
-                        border-radius: 50px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        color: white;
-                    }
-                }
-            }
         }
     }
 }
