--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -10,6 +10,8 @@
         // display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 40px;
+        // justify-content: center;
         // justify-content:space-between;
         // padding: 40px 80px 30px;
         width: 60%;
