--- a/component/setting.js/index.scss
+++ b/component/setting.js/index.scss
@@ -2,4 +2,8 @@
     height: 100vh;
     // display: flex;
     // justify-content: center;
+    .left-side {
+        width: 30%;
+        display: flex;
+    }
 }
