--- a/component/nestedComponent/home/homeSponsored/index.scss
+++ b/component/nestedComponent/home/homeSponsored/index.scss
@@ -27,7 +27,7 @@
 
         .profile-main {
             display: flex;
-            max-width: 580px;
+            max-width: 360px;
             max-height: 45px;
             justify-content: space-between;
             // justify-content: center;
@@ -63,8 +63,8 @@
             }
         }
         .post {
-            width: 320px;
-            height: 172px;
+            //     width: 320px;
+            //     height: 172px;
             margin: 0 20px;
         }
     }
