--- a/styles/scss/index.scss
+++ b/styles/scss/index.scss
@@ -7,3 +7,4 @@
 @import "../../component/home/index.scss";
 @import "../../component/setting.js";
 @import "../../component/nestedComponent/setting/accordion";
+// @import "../tools/mixins";
