--- a/component/dashBoard/dashBoard.scss
+++ b/component/dashBoard/dashBoard.scss
@@ -2,6 +2,7 @@
     max-height: 100vh !important;
     // background: #ffffff !important;
     // margin-top: 30px;
+    // margin: 0 auto;
     background: white !important;
     .ant-layout {
         background: white;
@@ -17,6 +18,7 @@
         // max-height: 100vh;
         // width: 100%;
         height: 100vh;
+        // display: block;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -47,6 +49,15 @@
 
         // display: flex;
         // flex-direction: column;
+        // .closed > :first-child {
+        //     height: auto;
+        // }
+        // .open > :first-child {
+        //     height: auto;
+        // }
+        ul > :first-child {
+            height: auto;
+        }
         .menu {
             background: #fbfbfb !important;
             border-radius: 16px;
@@ -56,7 +67,9 @@
             // text-align: center;
             // margin-left: 30px;
             // width: 100px !important;
-            max-width: 202px;
+
+            // max-width: 202px;
+
             // position: fixed;
             // align-items: center;
             // flex-direction: column;
@@ -69,6 +82,7 @@
             // background: #ffffff;
             // border-radius: 12px;
             // padding: 4px 0px;
+            // }
             // }
             .profile {
                 img {
@@ -164,7 +178,12 @@
         padding: 0 0 0 20px !important;
         margin: 20px 0 20px 0px !important;
     }
-
+    // ul > :first-child {
+    //     height: 60px !important;
+    // }
+    // .toggel {
+    //     height: 40px;
+    // }
     // .ant-layout-sider-children {
     // display: flex;
     // align-items: center;
@@ -207,5 +226,26 @@
             box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.07);
             // padding:152px  ;
         }
+    }
+    footer {
+        menu {
+            display: flex;
+            flex-direction: column;
+        }
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .logo {
+        display: none;
+    }
+    .menu-scroll {
+        display: none !important;
+        // width: 100%;
+        // position: fixed;
+        // bottom: 1px;
+        // display: flex;
+        // flex-direction: column;
+        // z-index: 222;
     }
 }
