--- a/component/home/index.scss
+++ b/component/home/index.scss
@@ -1,6 +1,9 @@
 .home_main {
     max-height: 100vh;
     display: flex;
+    // @include sm {
+    //     border: 1px solid #000;
+    // }
     .left-side {
         overflow: scroll;
         // position: fixed;
@@ -10,28 +13,50 @@
         // display: flex;
         flex-direction: column;
         align-items: center;
-        margin-top: 40px;
+        margin: 40px 20px 20px 20px;
         // justify-content: center;
         // justify-content:space-between;
         // padding: 40px 80px 30px;
         width: 60%;
         // height: 964px;
-        .toggel {
-            margin: 30px 0 32px 0;
+        // .toggel {
+        //     margin: 30px 0 32px 0;
+        // }
+        .status_1 {
+            max-width: 580px;
         }
-
         .status {
             // overflow-x: scroll;
             display: flex;
             flex-direction: row;
-            justify-content: space-around;
-            width: 580px;
+            // justify-content: unset;
+
+            max-width: 580px;
+            display: flex;
+            overflow: hidden;
             height: 140px;
-            // overflow: hidden;
+
+            .wow_1 {
+                display: flex;
+                // max-width: 580px;
+                // max-height: 140px;
+            }
+            .wow_2 {
+                margin-left: 10px;
+            }
+
+            // .wow_2 {
+            //     display: flex;
+            // }
+            display: flex;
+            &::-webkit-scrollbar {
+                display: none;
+            }
         }
         .post {
             margin-top: 30px;
         }
+
         display: flex;
         &::-webkit-scrollbar {
             display: none;
@@ -41,6 +66,7 @@
         width: 40%;
         // height: 100vh;
         overflow: scroll;
+        margin: 0px 10px 10px 10px;
         // position: fixed;
         // right: 0px;
         // position: relative;
@@ -50,7 +76,7 @@
         }
 
         .request {
-            width: 360px;
+            max-width: 360px;
             display: flex;
             justify-content: space-between;
             margin-top: 34px;
@@ -71,5 +97,16 @@
                 color: white;
             }
         }
+    }
+}
+@media screen and (max-width: 576px) {
+    .left-side {
+        .status {
+            display: none !important;
+        }
+        width: 100% !important;
+    }
+    .right-side {
+        display: none;
     }
 }
